fixed footer white space

--- a/css/styling.css
+++ b/css/styling.css
@@ -419,6 +419,7 @@ footer{
 
 footer{
   margin-top: 10px;
+  height: 15vh;
  }
 
 .footer{
